--- a/templates/home.html
+++ b/templates/home.html
@@ -6,5 +6,79 @@
 
 {% block content %}
     <!--page content-->
-    <h1>Home Page</h1>
+    <h1>Japanese Food Recommendations Form</h1>
+	
+	<!-- email and password -->
+	<div class="container mt-3">
+		<h2>Email and Password</h2>
+	<form action="/input">
+    <div class="mb-3 mt-3">
+      <label for="email">Email:</label>
+      <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+    </div>
+    <div class="mb-3">
+      <label for="pwd">Password:</label>
+      <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+    </div>
+    <div class="form-check mb-3">
+      <label class="form-check-label">
+        <input class="form-check-input" type="checkbox" name="remember"> Remember me
+      </label>
+    </div>
+  </form>
+</div>
+
+<!-- options What you looking for -->
+<div class="container mt-3">
+  <h2>What you looking for</h2>
+  <form action="/input">
+    <div class="form-check">
+      <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1">
+      <label class="form-check-label" for="radio1">Meal</label>
+    </div>
+    <div class="form-check">
+      <input type="radio" class="form-check-input" id="radio2" name="optradio" value="option2">
+      <label class="form-check-label" for="radio2">Snack</label>
+    </div>
+	<div class="form-check">
+      <input type="radio" class="form-check-input" id="radio3" name="optradio" value="option3">
+      <label class="form-check-label" for="radio3">Dessert</label>
+    </div>
+    
+    <button type="submit" class="btn btn-primary mt-3">Submit</button>
+  </form>
+</div>
+  
+  
+  
+<!-- options Meaty or Veggie -->
+<div class="container mt-3">
+  <h2>Meaty or Veggie</h2>
+  <form action="/input">
+    <div class="form-check">
+      <input type="radio" class="form-check-input" id="check1" name="option1" value="something" >
+      <label class="form-check-label" for="check1">Meaty</label>
+    </div>
+    <div class="form-check">
+      <input type="radio" class="form-check-input" id="check2" name="option2" value="something">
+      <label class="form-check-label" for="check2">Veggie</label>
+    </div>
+  </form>
+</div>
+<!-- options Plain or on fire -->
+<div class="container mt-3">
+  <h2>Plain or on fire!</h2>
+  
+  <form action="/input">
+    <div class="form-check">
+      <input type="radio" class="form-check-input" id="check1" name="option1" value="something" >
+      <label class="form-check-label" for="check1">Spicy</label>
+    </div>
+    <div class="form-check">
+      <input type="radio" class="form-check-input" id="check2" name="option2" value="something">
+      <label class="form-check-label" for="check2">Plain</label>
+    </div>
+  </form>
+</div>
+
 {% endblock %}
