--- a/templates/index.html
+++ b/templates/index.html
@@ -11,29 +11,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-  <title>{% block title %}{% endblock %} - My Webpage</title>
+  <title>{% block title %}{% endblock %} - Japanese Food Recommendations</title>
   
   </head>
   <body>
-     <!--nav bar-->
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">Japanese Food Recommendations</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a {% if active_page == "home" %} class="nav-link active"{% else %}class="nav-link"{% endif %} href="/">Home</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    
     
     <!--page content-->
     {% block content %}{% endblock %}
+	
+	
     
   </body>
 </html>
