--- a/templates/home.html
+++ b/templates/home.html
@@ -33,18 +33,17 @@
   <h2>What you looking for</h2>
   <form action="/input">
     <div class="form-check">
-      <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1">
+      <input type="radio" class="form-check-input" id="radio1" name="Q1" value="Meal">
       <label class="form-check-label" for="radio1">Meal</label>
     </div>
     <div class="form-check">
-      <input type="radio" class="form-check-input" id="radio2" name="optradio" value="option2">
+      <input type="radio" class="form-check-input" id="radio2" name="Q1" value="Snack">
       <label class="form-check-label" for="radio2">Snack</label>
     </div>
 	<div class="form-check">
-      <input type="radio" class="form-check-input" id="radio3" name="optradio" value="option3">
+      <input type="radio" class="form-check-input" id="radio3" name="Q1" value="Dessert">
       <label class="form-check-label" for="radio3">Dessert</label>
     </div>
-    
     <button type="submit" class="btn btn-primary mt-3">Submit</button>
   </form>
 </div>
@@ -52,33 +51,6 @@
   
   
 <!-- options Meaty or Veggie -->
-<div class="container mt-3">
-  <h2>Meaty or Veggie</h2>
-  <form action="/input">
-    <div class="form-check">
-      <input type="radio" class="form-check-input" id="check1" name="option1" value="something" >
-      <label class="form-check-label" for="check1">Meaty</label>
-    </div>
-    <div class="form-check">
-      <input type="radio" class="form-check-input" id="check2" name="option2" value="something">
-      <label class="form-check-label" for="check2">Veggie</label>
-    </div>
-  </form>
-</div>
-<!-- options Plain or on fire -->
-<div class="container mt-3">
-  <h2>Plain or on fire!</h2>
-  
-  <form action="/input">
-    <div class="form-check">
-      <input type="radio" class="form-check-input" id="check1" name="option1" value="something" >
-      <label class="form-check-label" for="check1">Spicy</label>
-    </div>
-    <div class="form-check">
-      <input type="radio" class="form-check-input" id="check2" name="option2" value="something">
-      <label class="form-check-label" for="check2">Plain</label>
-    </div>
-  </form>
-</div>
+
 
 {% endblock %}
