--- a/templates/input.html
+++ b/templates/input.html
@@ -2,8 +2,13 @@
 
 {% set active_page = "home" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Response{% endblock %}
+
+
 
 {% block content %}
+
+ <h1>Response:</h1>
+    <p>{{ response1 }}</p>
 
 {% endblock %}
