--- a/templates/input.html
+++ b/templates/input.html
@@ -9,8 +9,7 @@
 {% block content %}
 
  <h1>Response:</h1>
-    <p>{{ response1 }}</p>
-	<p>{{ response2 }}</p>
-	<p>{{ response3 }}</p>
-
+  <p>{{ response }}</p>
+<!--  <img src= "/static/{{shashin}}" alt= "Image of the food you picked" class="Img1"  > -->
+	
 {% endblock %}
