img is buggy, but mostly done

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,12 +6,14 @@
 
 {% block content %}
     <!--page content-->
-    <h1>Japanese Food Recommendations Form</h1>
+    <h1 class="heading" >Japanese Food Recommendations Form</h1>
 	
-	<!-- email and password -->
-	<div class="container mt-3">
-	<form action= "/input" class="needs-validation">	
+	<div class = "center">
+		<img src= "Jap_Food.jpg" alt= "Image of Japanese Food">
+	</div>
 
+	<div class="container mt-3 center">
+	<form action= "/input" class="needs-validation">	
 <!-- options What you looking for -->
   <h2>What you looking for</h2>
     <div class="form-check">
@@ -74,7 +76,7 @@
     <button type="submit" class="btn btn-primary mt-3">Submit</button>
   </form>
 	</div>
-  
+<div class="col-sm-3"></div
   
   
 <!-- options Meaty or Veggie -->
