--- a/static/style.css
+++ b/static/style.css
@@ -5,3 +5,17 @@
 body{
 	background-color:rgb(222, 224, 227);
 }
+
+.heading {
+text-align: center;
+font-family: "Lucida Console", monospace;
+}
+
+p{
+font-family: "Lucida Console", monospace;
+}
+
+.center{
+margin: auto;
+width: 50%;
+}
