--- a/templates/input.html
+++ b/templates/input.html
@@ -10,7 +10,7 @@
 	<h1 class="heading" >Japanese Food Recommendations Form</h1>
  	
  	<div class = "center" >
-		<img src= "Jap_Food.jpg" alt= "Image of Japanese Food">
+		<img src= "/static/Jap_Food.jpg" alt= "Image of Japanese Food">
 	</div>
 	
 	<div>
